# nexus-ai-team

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  Makefile  PHASE2A_SUMMARY.md  PROGRESS.md  PROJECT_PLAN.md  README.md  UAT_REPORT_PHASE3C.md  UAT_REPORT_PHASE4A.md  WORK_CALENDAR.md  alembic.ini  docker-compose.yml  pyproject.toml
agentoffice/: __init__.py  __main__.py  cli.py  config.py
agents/: README.md  __init__.py  admin.py  config.py  registry.yaml  test-report.md  test_litellm_dry_run.py
alembic/: env.py
company/: chain-of-command.yaml  mail-protocol.yaml  org.yaml  org.yaml.bak  org_summary.md  roles.yaml
dashboard/: chain-of-command.html
db/: __init__.py  client.py  integration.py  schema.sql
docker/: init.sql
docs/: architecture-review.md  chain-of-command.html  openclaw-vs-nexus-comparison.md  ops-audit-report.md  skill-manifest-spec.md  user-testing-report.md
equipment/: README.md  __init__.py  manager.py  registry.yaml
gateway/: agent_router.py  approval_webhook.py  auth.py  config.py  main.py  orchestrator_routes.py  rate_limiter.py  schemas.py  skill_registry.py  ws.py
heartbeat/: README.md  __init__.py  alerts.py  crontab.example  monitor.py  nexus-heartbeat.service  recovery.py  service.py
nexus/: __init__.py
nexus_v1/: __init__.py  admin.py  model_router.py  test_litellm_dry_run.py
phases/: phase3a-webgui.md  phase3b-qa-logging.md  phase3c-equipment.md  phase4a-heartbeat.md  phase5-docker-release.md  plan.conf  uat-phase3a.md  uat-phase3b.md  uat-phase3c.md  uat-phase4a.md  uat-phase5.md
(+279 files in other folders)
